--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
         const txt = userText.trim().toLowerCase()
 
         if (txt.includes('si') || txt.includes('ok') || txt.includes('dale')) {
-          return 'Perfecto. ¿Qué dato te falta para completar el ejercicio?'
+          //return 'Perfecto. ¿Qué dato te falta para completar el ejercicio?'
         }
         if (txt.includes('no')) {
-          return 'Entiendo. ¿Qué te impide avanzar: tiempo, información o dudas?'
+          //return 'Entiendo. ¿Qué te impide avanzar: tiempo, información o dudas?'
         }
         if (txt.length <= 3) {
-          return 'Te leo. Cuéntame un poco más para poder responderte bien 🙂'
+          //return 'Te leo. Cuéntame un poco más para poder responderte bien 🙂'
         }
         //random number between 1 and 100
         const rand = Math.floor(Math.random() * 100) + 1
