--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
         </div>
         <div style="display: flex; flex-direction: column; line-height: 1.1;">
           <div style="font-weight: 700;">Asistente</div>
-          <div id="status" style="font-size: 12px; color: #aebac1;">
-            en línea
-          </div>
+          <div id="status" style="font-size: 12px; color: #aebac1;">en línea</div>
         </div>
       </div>
 
@@ -77,9 +75,7 @@
       ></div>
 
       <!-- Input -->
-      <div
-        style="padding: 10px; background: #202c33; display: flex; gap: 10px;"
-      >
+      <div style="padding: 10px; background: #202c33; display: flex; gap: 10px;">
         <input
           id="msg"
           placeholder="Escribe un mensaje"
@@ -112,12 +108,17 @@
     </div>
 
     <script>
+      // 1) Pega aquí la URL de tu backend (Cloudflare Worker / Vercel / etc.)
+      // Ejemplo: https://hospital-eval.tuusuario.workers.dev
+      const BACKEND_BASE_URL = 'https://TU-WORKER.subdomain.workers.dev'
+
       const chatEl = document.getElementById('chat')
       const inputEl = document.getElementById('msg')
       const sendBtn = document.getElementById('send')
       const statusEl = document.getElementById('status')
 
-      const STORAGE_KEY = 'demo_wpp_chat_v1'
+      const STORAGE_KEY = 'demo_wpp_chat_v2_openai_hospital'
+      const SCENARIO_KEY = 'demo_wpp_scenario_v1'
 
       function nowTime() {
         const d = new Date()
@@ -170,17 +171,28 @@
         chatEl.scrollTop = chatEl.scrollHeight
       }
 
-      function load() {
+      function loadMessages() {
         try {
           return JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]')
-          
         } catch {
           return []
         }
       }
 
-      function save(messages) {
+      function saveMessages(messages) {
         localStorage.setItem(STORAGE_KEY, JSON.stringify(messages))
+      }
+
+      function loadScenario() {
+        try {
+          return localStorage.getItem(SCENARIO_KEY) || ''
+        } catch {
+          return ''
+        }
+      }
+
+      function saveScenario(scenario) {
+        localStorage.setItem(SCENARIO_KEY, scenario || '')
       }
 
       function renderAll(messages) {
@@ -188,91 +200,173 @@
         for (const m of messages) bubble(m)
       }
 
-      // flujo simple: respuesta automática basada en lo que el usuario escribió
-      function botReply(userText) {
-        const txt = userText.trim().toLowerCase()
-
-        if (txt.includes('si') || txt.includes('ok') || txt.includes('dale')) {
-          //return 'Perfecto. ¿Qué dato te falta para completar el ejercicio?'
-        }
-        if (txt.includes('no')) {
-          //return 'Entiendo. ¿Qué te impide avanzar: tiempo, información o dudas?'
-        }
-        if (txt.length <= 3) {
-          //return 'Te leo. Cuéntame un poco más para poder responderte bien 🙂'
-        }
-        //random number between 1 and 100
-        const rand = Math.floor(Math.random() * 100) + 1
-        //>50 - Te falta mejorar, podrias usar la estrategia de mejorar la comunicacion a través de la claridad
-        //>80 - Buen trabajo, sigue así y considera compartir tus conocimientos con otros
-        //<=50 - Puedes aplicar practicas mejores, por ejemplo podrias tener en cuenta que los rumores no son siempre ciertos
-        if (rand > 80) {
-          return 'Buen trabajo, sigue así y considera compartir tus conocimientos con otros.'
-        } else if (rand > 50) {
-          return 'Te falta mejorar, podrías usar la estrategia de mejorar la comunicación a través de la claridad.'
-        } else {
-          return 'Puedes aplicar prácticas mejores, por ejemplo podrías tener en cuenta que los rumores no son siempre ciertos.'
-        }
-      }
-
-      // Init chat
-      let messages = load()
-      if (!messages.length) {
-        messages = [
-          {
-            from: 'bot',
-            text: 'Hola 👋 Esta es una demo de conversación tipo WhatsApp.',
-            time: nowTime(),
-          },
-          {
-            from: 'bot',
-            text:
-              'Vas a ver 2–3 mensajes y luego debes responder con texto libre.',
-            time: nowTime(),
-          },
-          {
-            from: 'bot',
-            text: '¿Listo? Responde: ¿Qué harías en este caso?',
-            time: nowTime(),
-          },
-          {
-            from: 'bot',
-            text:
-              'Te enteraste que la de recursos humanos se fue a solas con el doctor de gastro?',
-            time: nowTime(),
-          },
-        ]
-        save(messages)
-      }
-      renderAll(messages)
-
       function setTyping(on) {
         statusEl.textContent = on ? 'escribiendo…' : 'en línea'
       }
 
-      function send() {
+      function setInputEnabled(enabled) {
+        inputEl.disabled = !enabled
+        sendBtn.disabled = !enabled
+        sendBtn.style.opacity = enabled ? '1' : '0.6'
+      }
+
+      async function apiPost(path, payload) {
+        const res = await fetch(`${BACKEND_BASE_URL}${path}`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: payload ? JSON.stringify(payload) : '{}',
+        })
+        if (!res.ok) {
+          const t = await res.text().catch(() => '')
+          throw new Error(`HTTP ${res.status} - ${t}`)
+        }
+        return await res.json()
+      }
+
+      async function ensureScenarioAndIntro(messages) {
+        // Si ya hay conversación, no la reiniciamos.
+        if (messages.length) return messages
+
+        messages.push({
+          from: 'bot',
+          text: 'Hola. Vamos a simular una conversación estilo WhatsApp.',
+          time: nowTime(),
+        })
+        messages.push({
+          from: 'bot',
+          text:
+            'Te mostraré una situación dentro de un hospital (tipo chisme/rumor). Responde como lo harías tú y luego te calificaré (1 a 100) por tacto, calidez y elementos comunicativos.',
+          time: nowTime(),
+        })
+        saveMessages(messages)
+        renderAll(messages)
+
+        let scenario = loadScenario()
+        if (!scenario) {
+          setTyping(true)
+          setInputEnabled(false)
+          try {
+            const data = await apiPost('/api/scenario')
+            scenario = data?.scenario || ''
+            saveScenario(scenario)
+          } catch (e) {
+            scenario =
+              'No pude generar la situación (backend/CORS). Aun así, imagina que un compañero te cuenta un rumor delicado sobre una relación entre dos personas del hospital. ¿Cómo responderías con tacto?'
+            console.error(e)
+          } finally {
+            setTyping(false)
+            setInputEnabled(true)
+          }
+        }
+
+        messages.push({
+          from: 'bot',
+          text: scenario || '(Sin situación)',
+          time: nowTime(),
+        })
+        messages.push({
+          from: 'bot',
+          text: '¿Qué responderías?',
+          time: nowTime(),
+        })
+        saveMessages(messages)
+        renderAll(messages)
+        return messages
+      }
+
+      function hasEvaluationAlready(messages) {
+        return messages.some((m) => m?.meta === 'evaluación')
+      }
+
+      function formatEvaluation(e) {
+        const score = e?.score ?? '—'
+        const tacto = e?.breakdown?.tacto ?? '—'
+        const calidez = e?.breakdown?.calidez ?? '—'
+        const elementos = e?.breakdown?.elementos ?? '—'
+        const feedback = e?.feedback ?? ''
+
+        return (
+          `Puntaje: ${score}/100\n` +
+          `Tacto: ${tacto}\n` +
+          `Calidez: ${calidez}\n` +
+          `Elementos comunicativos: ${elementos}\n\n` +
+          `Feedback:\n${feedback}`
+        )
+      }
+
+      async function send() {
         const text = inputEl.value
         if (!text.trim()) return
+        const myText = text.trim()
 
-        const myMsg = { from: 'me', text: text.trim(), time: nowTime() }
+        const myMsg = { from: 'me', text: myText, time: nowTime() }
         messages.push(myMsg)
-        save(messages)
+        saveMessages(messages)
         bubble(myMsg)
         inputEl.value = ''
         inputEl.focus()
 
-        // Simula "escribiendo…" y luego respuesta
-        setTyping(true)
-        const replyText = botReply(myMsg.text)
+        // Evaluamos SOLO la primera respuesta del usuario por sesión (puedes cambiarlo).
+        if (hasEvaluationAlready(messages)) {
+          setTyping(true)
+          setTimeout(() => {
+            const botMsg = {
+              from: 'bot',
+              text:
+                'Ya tengo una evaluación. Si quieres reiniciar y generar otra situación, recarga la página y borra el almacenamiento del navegador (LocalStorage).',
+              time: nowTime(),
+            }
+            messages.push(botMsg)
+            saveMessages(messages)
+            bubble(botMsg)
+            setTyping(false)
+          }, 650)
+          return
+        }
 
-        setTimeout(() => {
-          const botMsg = { from: 'bot', text: replyText, time: nowTime() }
+        const scenario = loadScenario()
+        setTyping(true)
+        setInputEnabled(false)
+
+        try {
+          const data = await apiPost('/api/evaluate', {
+            scenario,
+            userResponse: myText,
+          })
+
+          // Mensaje de resultado como "meta" centrado + burbuja
+          bubble({ meta: 'evaluación' })
+          const botMsg = {
+            from: 'bot',
+            text: formatEvaluation(data),
+            time: nowTime(),
+            meta: 'evaluación',
+          }
           messages.push(botMsg)
-          save(messages)
+          saveMessages(messages)
           bubble(botMsg)
+        } catch (e) {
+          console.error(e)
+          const botMsg = {
+            from: 'bot',
+            text:
+              'No pude evaluar tu respuesta (backend/CORS). Revisa la URL del backend y que CORS permita tu GitHub Pages.',
+            time: nowTime(),
+          }
+          messages.push(botMsg)
+          saveMessages(messages)
+          bubble(botMsg)
+        } finally {
           setTyping(false)
-        }, 1200)
+          setInputEnabled(true)
+        }
       }
+
+      // Init
+      let messages = loadMessages()
+      renderAll(messages)
+
+      ensureScenarioAndIntro(messages).catch(console.error)
 
       sendBtn.addEventListener('click', send)
       inputEl.addEventListener('keydown', (e) => {
