update backend URL in index.html and add wrangler configuration file

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <script>
       // 1) Pega aquí la URL de tu backend (Cloudflare Worker / Vercel / etc.)
       // Ejemplo: https://hospital-eval.tuusuario.workers.dev
-      const BACKEND_BASE_URL = 'https://TU-WORKER.subdomain.workers.dev'
+      const BACKEND_BASE_URL = 'https://hospital-eval.jcchachalo.workers.dev/'
 
       const chatEl = document.getElementById('chat')
       const inputEl = document.getElementById('msg')
